--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Lit Simple Starter Kit</title>
 </head>
 <body>
+
     <ant-button nzType="primary" nzSize="large" class="test" style="border-radius: 30px;">测试</ant-button>
     <ant-button nzType="default" nzSize="large">测试</ant-button>
     <ant-button nzType="default" nzDanger nzSize="large">测试</ant-button>
+    <ant-icon nzType="step-backward"></ant-icon>
     <script type="module" src="/components/index.ts"></script>
 </body>
 </html>
