--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lit Simple Starter Kit</title>
+    <style>
+      .text-red{
+        color: red;
+        font-size: 28px;
+      }
+    </style>
 </head>
 <body>
 
@@ -12,6 +18,10 @@
     <ant-button nzType="default" nzSize="large">测试</ant-button>
     <ant-button nzType="default" nzDanger nzSize="large">测试</ant-button>
     <ant-icon nzType="step-backward"></ant-icon>
+    <ant-icon nzType="up-circle"></ant-icon>
+    <ant-icon nzType="left"></ant-icon>
+    <ant-icon nzType="right"></ant-icon>
+    <ant-icon nzType="warning" nzTheme="Filled" class="text-red"></ant-icon>
     <script type="module" src="/components/index.ts"></script>
 </body>
 </html>
